hphp/test/quick/asm_types.hhas.expectf
Warning: Argument 1 to use_class() must be of type @C, null given in %s on line 7

Warning: Argument 1 to use_int_soft() must be of type @int, %r(HH\\dict|darray)%r given in %s on line 13

Warning: Argument 1 to use_int_soft() must be of type @int, null given in %s on line 13

Catchable fatal error: Argument 1 passed to use_int() must be an instance of int, %r(HH\\dict|darray)%r given in %s on line 36
